--- a/pages/exam/index.html
+++ b/pages/exam/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="../exam/css/style.css">
 </head>
 <body>
     <div class="wrapper">
-        
+        <p class="order-num">Заказ №231</p>
+        <div class="accept-wrapper">
+            <h3>Приняли</h3>
+            <h3>24 мин</h3>
+        </div>
+        <div class="line"></div>
+        <p class="address">Адрес доставки: Москва, ул. 1-я Машиностроения, д. 10</p>
+        <div class="button-wrapper">
+            <button class="button-deny button" type="button">Отменить заказ</button>
+            <button class="button-back button" type="button">Вернуться в меню</button>
+        </div>
     </div>
     
 </body>
