--- a/pages/exam/index.html
+++ b/pages/exam/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,22 +11,28 @@
       rel="stylesheet"
     />
     <title>Document</title>
-    <link rel="stylesheet" href="../exam/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../exam/css/style.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        <p class="order-num">Заказ №231</p>
-        <div class="accept-wrapper">
-            <h3>Приняли</h3>
-            <h3>24 мин</h3>
-        </div>
-        <div class="line"></div>
-        <p class="address">Адрес доставки: Москва, ул. 1-я Машиностроения, д. 10</p>
-        <div class="button-wrapper">
-            <button class="button-deny button" type="button">Отменить заказ</button>
-            <button class="button-back button" type="button">Вернуться в меню</button>
-        </div>
+      <p class="order-num">Заказ №231</p>
+      <div class="accept-wrapper">
+        <h3 class="accept-text">Приняли</h3>
+        <h3 class="accept-min">24 мин</h3>
+      </div>
+      <div class="line">
+        <p class="media__header">Адрес доставки:</p>
+        <p class="media__text">Москва, ул. 1-я Машиностроения, д. 10</p>
+      </div>
+      <p class="address">
+        Адрес доставки: Москва, ул. 1-я Машиностроения, д. 10
+      </p>
+      <div class="button-wrapper">
+        <button class="button-deny button" type="button">Отменить заказ</button>
+        <button class="button-back button" type="button">
+          Вернуться в меню
+        </button>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
