--- a/pages/exam/index.html
+++ b/pages/exam/index.html
@@ -25,7 +25,7 @@
         <p class="media__text">Москва, ул. 1-я Машиностроения, д. 10</p>
       </div>
       <p class="address">
-        Адрес доставки: Москва, ул. 1-я Машиностроения, д. 10
+        <b>Адрес доставки:</b> Москва, ул. 1-я Машиностроения, д. 10
       </p>
       <div class="button-wrapper">
         <button class="button-deny button" type="button">Отменить заказ</button>
